# loa-data-smith

./: Cargo.toml  README.md
docs/: TODO.md
src/: macros.rs  main.rs  utils.rs
src/data/: mod.rs
src/data/json/: AwakeningSkillIds.json  Class.json  CubeSkillBuffs.json  DisguiseSkills.json  HyperAwakeningSkillIds.json  HyperAwakeningTechniqueSkillIds.json  ManualSkillToSkillBuff.json  NpcSkillBuffs.json  NpcSkills.json  RaidDifficulty.json  SkillBuffToSkill.json  SkillDescriptor.json  SkillGroups.json  SkillToSkillBuff.json  Specialisation.json  TriggerSignals.json  Zones.json  mod.rs
src/data/models/: combat_effect.rs  engraving.rs  mod.rs  npc.rs  passive_option.rs  skill.rs  skill_buff.rs  skill_descriptor.rs  skill_effect.rs  skill_feature.rs  skill_group.rs  zone.rs
src/deserializer/: empty_string_as_none.rs  mod.rs  null_as_empty_u32_vec.rs  to_buff_type.rs  to_duration.rs  to_skill_buff_set_name.rs  to_skill_buff_unique_group.rs  to_skill_group.rs  u16_zero_as_none.rs  u32_zero_as_none.rs
src/examples/: mod.rs
src/models/: chaos_dungeon.rs  class.rs  cube.rs  field_bosses.rs  mod.rs  npc.rs  skill.rs  skill_buff.rs  skill_effect.rs
src/models/adventure_tome/: anikka.rs  arthetine.rs  east_luterra.rs  elgacia.rs  feiton.rs  mod.rs  north_kurzan.rs  north_vern.rs  punika.rs  rethramis.rs  rohendel.rs  rowen.rs  shushire.rs  south_kurzan.rs  south_vern.rs  tortoyk.rs  voldis.rs  west_luterra.rs  yorn.rs  yudia.rs
src/models/islands/: mod.rs
src/models/raid/: epic_raid.rs  (+2 more)
src/utils/: misc.rs  mod.rs  npc.rs  skill.rs  skill_group.rs  web_scrapper.rs
(+22 files in other folders)
