[package]
name = "loa-data-smith"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

[dependencies]
rustc-hash = "2.1.0"
chrono = "0.4.31"
tokio = { version = "1.42.0", features = ["full"] }
duckdb = { version = "1.1.1", features = ["bundled", "r2d2"] }
r2d2 = "0.8.10"
log = "0.4.22"
fern = "0.7.1"
dotenv = "0.15.0"
once_cell = "1.20.2"
serde = { version = "1", features = ["derive"] }
serde_with = "3.5.1"
serde_json = "1"
anyhow = "1.0.91"
rand = "0.8"
uuid = { version = "1.8.0", features = ["v4"] }
strum = "0.26"
strum_macros = "0.26"
clipboard = "0.5.0"
reqwest = {version = "0.12.12", features = ["blocking"]}
scraper = "0.22.0"
regex = "1.11.1"